--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ entrypoints==0.4
 exceptiongroup==1.1.2
 executing==1.2.0
 fastapi==0.99.1
-fonttools==4.39.3
+#fonttools==4.39.3
 h11==0.14.0
 idna==3.4
 ipykernel==6.20.2
