--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ fastapi==0.99.1
 h11==0.14.0
 idna==3.4
 #ipykernel==6.20.2
-ipython==8.8.0
+#ipython==8.8.0
 jedi==0.18.2
 Jinja2==3.1.2
 joblib==1.2.0
