--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,7 @@ jedi==0.18.2
 Jinja2==3.1.2
 joblib==1.2.0
 jupyter_client==7.4.9
-jupyter_core==5.1.3
+#jupyter_core==5.1.3
 kiwisolver==1.4.4
 kneed==0.8.3
 MarkupSafe==2.1.3
