--- a/requirements.txt
+++ b/requirements.txt
@@ -25,7 +25,7 @@ jupyter_client==7.4.9
 kiwisolver==1.4.4
 kneed==0.8.3
 MarkupSafe==2.1.3
-matplotlib==3.7.1
+#matplotlib==3.7.1
 matplotlib-inline==0.1.6
 nest-asyncio==1.5.6
 numpy==1.24.2
