--- a/requirements.txt
+++ b/requirements.txt
@@ -28,7 +28,7 @@ MarkupSafe==2.1.3
 #matplotlib==3.7.1
 matplotlib-inline==0.1.6
 nest-asyncio==1.5.6
-numpy==1.24.2
+numpy
 packaging==23.0
 pandas==2.0.3
 parso==0.8.3
