--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ backcall==0.2.0
 click==8.1.3
 colorama==0.4.6
 comm==0.1.2
-#contourpy==1.0.7
+contourpy
 cycler==0.11.0
 debugpy==1.6.5
 decorator==5.1.1
@@ -12,25 +12,25 @@ entrypoints==0.4
 exceptiongroup==1.1.2
 executing==1.2.0
 fastapi==0.99.1
-#fonttools==4.39.3
+fonttools
 h11==0.14.0
 idna==3.4
-#ipykernel==6.20.2
-#ipython==8.8.0
+ipykernel
+ipython
 jedi==0.18.2
 Jinja2==3.1.2
 joblib==1.2.0
 jupyter_client==7.4.9
-#jupyter_core==5.1.3
+jupyter_core
 kiwisolver==1.4.4
 kneed==0.8.3
 MarkupSafe==2.1.3
-#matplotlib==3.7.1
+matplotlib
 matplotlib-inline==0.1.6
 nest-asyncio==1.5.6
 numpy
 packaging==23.0
-pandas==2.0.3
+pandas
 parso==0.8.3
 pickleshare==0.7.5
 Pillow==9.5.0
