--- a/requirements.txt
+++ b/requirements.txt
@@ -44,7 +44,7 @@ PyMySQL==1.0.3
 pyparsing==3.0.9
 python-dateutil==2.8.2
 pytz==2023.3
-pywin32==305
+pywin32
 pyzmq==25.0.0
 scikit-learn==1.2.2
 scipy==1.10.1
