--- a/requirements.txt
+++ b/requirements.txt
@@ -46,7 +46,7 @@ python-dateutil==2.8.2
 pytz==2023.3
 #pywin32
 pyzmq==25.0.0
-scikit-learn==1.2.2
+scikit-learn
 scipy==1.10.1
 seaborn==0.12.2
 six==1.16.0
