--- a/requirements.txt
+++ b/requirements.txt
@@ -50,7 +50,7 @@ scikit-learn
 scipy
 seaborn==0.12.2
 six==1.16.0
-sklearn==0.0.post5
+sklearn
 sniffio==1.3.0
 stack-data==0.6.2
 starlette==0.27.0
